1. 트럭커의 차량 등록 2. 계약 체결 추가

--- a/module-trucker/build.gradle
+++ b/module-trucker/build.gradle
@@ -36,6 +36,10 @@ dependencies {
     // mysql
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     runtimeOnly 'com.mysql:mysql-connector-j'
+
+    //feign
+    implementation platform("org.springframework.cloud:spring-cloud-dependencies:2021.0.5")
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 }
 
 tasks.named('test') {
