--- a/module-shipper/src/main/resources/application.properties
+++ b/module-shipper/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=module-shipper
+server.port=8001
+
+# mysql
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/truck_matching?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=123963
