1. service 를 domain 별로 구분함 2. test 는 Mock 사용하도록 수정 3. repository 는 interface 만 사용하도록 수정

--- a/module-trucker/src/main/resources/application.properties
+++ b/module-trucker/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.application.name=module-trucker
 server.port=8002
+
+# mysql
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/truck_matching?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=123963
